src/styles/pages/work.scss
.project {
	position: relative;
	height: 100vh;
	width: 100%;
	overflow: hidden;
	background-color: var(--color_typo);
	transform: translateY(100vh);
	animation: intro_slide 0.6s ease-out forwards;

	&__intro {
		position: absolute;
		top: 0;
		left: 0;
		height: 100vh;
		width: 100%;
		background-color: var(--color_main);
		transform: translateY(100vh);
		animation: intro_slide 0.6s ease-out forwards 0.3s;
	}

	&__content {
		position: relative;
		display: flex;
		flex-direction: column;
		align-items: center;
		// min-height: 100vh;
		// height: -webkit-fill-available;
		background-color: var(--color_background);
		transform: translateY(100vh);
		animation: intro_slide 0.6s ease-out forwards 0.6s;
		overflow: scroll;
		z-index: 5;
	}

	&__hero {
		height: 45vh;
		width: 100%;
		margin-top: 3rem;

		@include small {
			height: 35vh;
		}

		img {
			width: 100%;
			height: 100%;
			object-fit: cover;
		}
	}

	&__links {
		position: fixed;
		bottom: 2rem;
		right: 2rem;
		display: flex;
		flex-direction: column;
		max-width: 900px;
		gap: 1rem;
		z-index: 50;
	}

	&__cta {
		display: flex;
		justify-content: center;
		align-items: center;
		width: 4rem;
		height: 4rem;
		padding: 1rem 0;
		border-radius: 50%;
		text-align: center;
		background-color: var(--color_main);
		font-family: var(--font_default);
		color: var(--color_typo);
		font-weight: 500;
		transition: transform 0.3s ease-out;

		svg {
			transform: scale(1.2);
		}

		&:hover {
			transform: scale(1.1);
		}
	}

	&__md {
		--title-margin: 2.5rem;
		max-width: 900px;
		padding: 1rem 4rem;
		font-family: var(--font_default);
		font-size: 1.2rem;
		line-height: 150%;

		h1 {
			font-weight: 700;
			font-size: 2.5rem;
			margin: var(--title-margin) 0;
		}
		h2 {
			font-weight: 600;
			font-size: 2rem;
			margin: calc(var(--title-margin) * 0.8) 0;
		}
		h3 {
			font-weight: 500;
			font-size: 1.6rem;
			margin: calc(var(--title-margin) * 0.5) 0;
		}

		p {
			margin-top: calc(var(--title-margin) * 0.3);
		}

		a {
			color: var(--color_typo);
			// background-color: var(--color_main);
			text-decoration: underline;
			transition: background-color 0.3s ease-out;

			&:hover {
				background-color: var(--color_main);
			}
		}
	}
}

@keyframes intro_slide {
	0% {
		transform: translateY(100vh);
	}

	100% {
		transform: translateY(0);
	}
}

